# my-nostr-relay

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  CODE_REVIEW.md  DESIGN.md  DESIGN_REVIEW.md  REFACTOR_DESIGN.md  RELAY_NIPS.md  package-lock.json  ren-readonly-policy.json
.claude/commands/: relay-test.md
.github/workflows/: build-test.yml  ci-frontend.yml  ci-rust.yml  deploy.yml
.kiro/specs/aws-budget-service-shutdown/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/nip-01-implementation/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/nip-09-event-deletion/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/nip-11/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/nip11-limitations/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/opensearch-req-processing/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/search-ec2-sqlite/: concept.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
apps/web/: package-lock.json  package.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/api/link-preview/: route.ts
apps/web/app/components/: ActionBar.tsx  CanvasHeader.tsx  ComposeCard.tsx  EmojiPickerPopover.tsx  EmptyState.tsx  HashtagModal.tsx  LiveCanvas.tsx  NoteCard.tsx  NoteCardContent.tsx  ReactionTooltip.tsx  ReplyCompose.tsx  StatusIndicator.tsx  ThreadCard.tsx  UserProfileModal.tsx
apps/web/app/components/content/: ContentRenderer.tsx  EmojiNode.tsx  HashtagNode.tsx  ImageLightbox.tsx  ImageNode.tsx  LinkNode.tsx  LinkPreviewNode.tsx  QuoteNode.tsx  TextNode.tsx
apps/web/app/contexts/: AuthContext.tsx
apps/web/app/hooks/: useCardLayout.ts  useCustomEmojis.ts  useDraftNotes.ts  useEventCache.ts  useHashtagNotes.ts  useImageUpload.ts  useNostrConnection.ts  useNostrNotes.ts  useNostrProfiles.ts  useNostrReactions.ts  useNostrRelay.ts  useQuotedEvent.ts  useRecentEmojis.ts  useReplyDrafts.ts  useThreadCards.ts  useUserRecentNotes.ts
apps/web/app/lib/: blossom.ts  constants.ts  contentParser.ts  createNoteCard.ts  debug.ts  gravity.ts  hashtags.ts  layoutConstants.ts  layoutEngine.ts  layoutTypes.ts  nip19.ts  reactionContent.ts  reactions.ts  scoring.ts  threadBuilder.ts  types.ts
apps/web/app/lib/__tests__/: contentParser.test.ts  gravity.test.ts  hashtags.test.ts  layoutEngine.test.ts  reactionContent.test.ts  reactions.test.ts  threadBuilder.test.ts
apps/web/app/relay/(policy)/: layout.tsx
apps/web/app/relay/(policy)/posting-policy/: page.tsx
apps/web/app/relay/(policy)/privacy/: page.tsx
apps/web/app/store/: index.ts  selectors.ts  types.ts
apps/web/app/store/pure/: buildCards.ts  buildThreads.ts  layoutEngine.ts  scoring.ts
apps/web/app/store/slices/: canvas.ts  connection.ts  feed.ts  profiles.ts  publish.ts  quotes.ts  reactions.ts  threads.ts
apps/web/app/types/: blossom.ts  nostr.d.ts  nostr.ts
deploy/: relay-v2.env
scripts/: publish-handler.sh
services/relay/: Cargo.toml  rust-toolchain.toml
services/relay-v2/: Cargo.toml
services/relay-v2/src/: config.rs  lib.rs  main.rs  nip11.rs  relay.rs  store.rs  test_helpers.rs  ws.rs
services/relay-v2/src/models/: event.rs  filter.rs  kind.rs  pubkey.rs  relay_message.rs  sig.rs  subscription_id.rs  tag.rs
services/relay-v2/src/store/: dynamo.rs  in_memory.rs
services/relay-v2/tests/: e2e.rs  nip11.rs
services/relay/src/: application.rs  config.rs  domain.rs  infrastructure.rs  lib.rs  logging.rs  main.rs  models.rs  nip11.rs  owner_priority.rs  relay.rs  store.rs  test_helpers.rs  ws.rs
services/relay/src/application/: connect_handler.rs  default_handler.rs  deletion_handler.rs  disconnect_handler.rs  event_handler.rs  message_parser.rs  nip11_handler.rs  subscription_handler.rs
services/relay/src/domain/: deletion_target.rs  deletion_validator.rs  event_kind.rs  event_validator.rs  filter_evaluator.rs  limitation_config.rs  relay_info.rs  relay_message.rs
services/relay/src/infrastructure/: cloudfront_ops.rs  config.rs  connection_repository.rs  ec2_ops.rs  event_repository.rs  health_check_ops.rs  lambda_ops.rs  logging.rs  opensearch.rs  recovery_config.rs  relay_info_config.rs  shutdown_config.rs  sns_ops.rs  ssm_ops.rs  subscription_repository.rs  websocket_sender.rs
services/relay/src/infrastructure/http_sqlite/: config.rs  event_repository.rs  http_sqlite_indexer.rs  indexer_client.rs  mod.rs  rebuilder.rs
services/relay/src/infrastructure/opensearch/: client.rs  config.rs  event_repository.rs  filter_to_query_converter.rs  index_document.rs  indexer.rs  rebuilder.rs
services/relay/src/models/: client_message.rs  event.rs  event_id.rs  filter.rs  kind.rs  relay_message.rs  sig.rs  subscription_id.rs  tag.rs  timestamp.rs
services/relay/src/store/: dynamo.rs  in_memory.rs
services/relay/tests/: e2e.rs  nip11.rs
services/sqlite-api/: Cargo.toml
services/sqlite-api/src/: auth.rs  error.rs  main.rs  store.rs
terraform/: main.tf
terraform/aws/: main.tf
terraform/modules/api/: cloudfront.tf  cloudwatch_logs.tf  dynamodb.tf  indexer.tf  lambda_edge.tf  main.tf  nip11.tf  opensearch.tf
terraform/modules/api/edge-router/: index.js  index.test.js  package-lock.json  package.json
terraform/modules/api/files/: opensearch_index_template.json
terraform/modules/budget/: main.tf
terraform/modules/domain/: main.tf
terraform/modules/ec2-relay/: main.tf  s3.tf  ssm.tf  user_data.sh.tpl
terraform/modules/ec2-search/: main.tf  s3.tf  ssm.tf  ssm.tftest.hcl  user_data.sh.tpl
terraform/modules/github-actions/: main.tf
terraform/modules/web/: main.tf
terraform/vercel/: main.tf
(+1 files in other folders)
