[package]
name = "relay"
version = "0.2.1"
edition = "2024"

[dependencies]
# AWS Lambdaランタイム
lambda_runtime = "1.0.1"

# AWS Lambda HTTPランタイム（NIP-11用）
lambda_http = "1.0.1"

# Nostrプロトコルライブラリ - イベントモデル、署名検証、フィルター評価
nostr = "0.44"

# AWS SDK - DynamoDB操作
aws-sdk-dynamodb = "1"

# AWS SDK - API Gateway Management APIによるWebSocketメッセージ送信
aws-sdk-apigatewaymanagement = "1"

# AWS SDK - 認証と設定
aws-config = "1"

# 非同期トレイトサポート
async-trait = "0.1"

# シリアライズ
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"

# エラーハンドリング
thiserror = "2"

# 構造化ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 非同期ランタイム
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
# テストのシリアル実行（環境変数テストの競合防止）
serial_test = "3"
